# meme-text-inserter-9000

./: .gitignore  ATTRIBUTION.md  LICENSE  README.md  index.html  package-lock.json  package.json  server.js  setup-vendor.js  tsconfig.json  vite.config.ts
docs/: github-release-workflow.yml
public/: index.html  style.css
public/js/: audio.js  dom.js  editor.js  ffmpeg.js  main.js  preview.js  saved-bar.js  state.js  theme.js  utils.js
src/: App.svelte  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: MediaPanel.svelte  MediaStage.svelte  PreviewSavePanel.svelte  WorkflowSidebar.svelte
src/domain/: actions.ts  format.ts  initial-state.ts  layer-factories.ts  layer-playback.ts  layer-position.ts  media.ts  path-recorder.ts  reducer.ts  types.ts
src/infrastructure/: export-renderer.ts  ffmpeg-video.ts  ffmpeg.ts  id.ts  media-loader.ts  media-metadata.ts
src/store/: app-store.ts
