[package]
name = "meme-enhancer-9000"
version = "0.0.1"
description = "Meme Enhancer 9000 desktop app"
authors = ["Meme Enhancer 9000 contributors"]
edition = "2021"
license = "GPL-2.0-or-later"

[lib]
name = "meme_enhancer_9000_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.3", features = [] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
